# studyone

./: Cargo.toml  ERROR.txt  FILTERING_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  ISSUE.txt  JOURNAL.md  LONGITUDINAL_DATA.md  OUT.md  OUT.txt  OUTPUT.md  OUTPUTv2.md  REFACTORING.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  REGISTRY_MODEL_INTEGRATION.md  SCDalgo.r  SERDE_ARROW.md  TESTS.md  TEST_FIXES.md  TEST_ORGANIZATION.md  TEST_OUT.md  TODO.md  TODO.txt  arrowreader.md  fix_errors.sh  lpr_diag_output.txt  lpr_parquet_test_output.txt  metadata.md  reading_single.md  update_imports.sh
.cargo/: config.toml
LINTS/: all.txt  pedantic.txt
TODO/: FILTER_MIGRATION.md  FILTER_MIGRATIONv2.md  LPR.md  STUDY_FLOW.md
examples/: akm_deserialization.rs  async_loader_example.rs  bef.rs  bef_akm_ind_integration.rs  bef_deserialization.rs  bef_test.rs  direct_deserialization.rs  id_field_test.rs  load_all_data.rs  longitudinal.rs  longitudinal_data.rs  lpr.rs  lpr3_example.rs  lpr_diag_example.rs  lpr_macro.rs  lpr_parquet_test.rs  lpr_test.rs  mod.rs  multi_registry_loader.rs  multiple.rs  multiple_test.rs  parrallel_loader.rs  schema.rs  schema_macros_example.rs  temporal_data.rs  test_from_batch.rs  unified_system_example.rs  vnds.rs  vnds_test.rs
examples/sequential_registry_loader/: processor.rs
legacy/code/: transform.rs
legacy/refactoring/: IMPLEMENTATION_PROGRESS.md  REGISTRY_DESERIALIZATION.md  REGISTRY_MODEL_BOUNDARIES.md  SERDE_ATTRIBUTES_APPROACH.md
macros/: Cargo.toml
macros/src/: lib.rs  property_field.rs  property_field_impl.rs  registry_trait.rs  utils.rs
par-reader-macros/: Cargo.toml
par-reader-macros/src/: lib.rs
refactoring/: CURRENT_STATUS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  IMPORT_CLEANUP_EXAMPLE.md  INDIVIDUAL_REFACTORING.md  INDIVIDUAL_SERDE_REFACTORING.md  IND_MIGRATION_GUIDE.md  MIGRATION_GUIDE.md  MODELS_CLEANUP.md  REGISTRY_IMPLEMENTATION_PLAN.md  REGISTRY_MIGRATION_PROGRESS.md
reference/: ADAPTER_MIGRATION_PLAN.md  DIRECT_CONVERSION_MIGRATION.md  FILTER_TESTING.md  parquet_async.rs  parquet_utils.rs
reference/TODO/: DATATYPES.md  IMPLEMENTATION_PLAN.md
reference/algorithms/: balance.rs  matching.rs  sampler.rs
reference/health/: lpr.rs  mod.rs
reference/registers/: akm.rs  bef.rs  dod.rs  dodsaarsag.rs  idan.rs  ind.rs  lpr.rs  mfr.rs  mod.rs  uddf.rs  vnds.rs
reference/schemas/: akm.rs  bef.rs  dod.rs  dodsaarsag.rs  ind.rs  lpr3_diagnoser.rs  lpr3_kontakter.rs  lpr_adm.rs  lpr_bes.rs  lpr_diag.rs  mfr.rs  uddf.rs  vnds.rs
serde_arrow_example/: Cargo.toml
serde_arrow_example/src/: main.rs
src/: filter_expression.rs  lib.rs  loader.rs  main.bk  main.rs  pnr_filter.rs  registry_manager.rs
src/adapters/: bef.rs  ind.rs  lpr.rs  mfr.rs  mod.rs
src/algorithm/: mod.rs
src/async_io/: batch_ops.rs  file_ops.rs  filter_ops.rs  loader.rs  mod.rs  parallel_ops.rs
src/collections/: diagnosis.rs  family.rs  individual.rs  mod.rs
src/common/: mod.rs
src/config/: mod.rs
src/error/: mod.rs  util.rs
src/examples/: async_loader_example.rs  conversion_example.rs  filter_example.rs  filter_migration_example.rs  ind_model_integration_example.rs  lpr_model_integration_example.rs  mod.rs  population_generation.rs  registry_model_integration_example.rs  schema_macros_example.rs
src/filter/: adapter.rs  async.rs  core.rs  date.rs  error.rs  expr.rs  generic.rs  mod.rs  pnr.rs
src/models/: INDIVIDUAL_IMPROVEMENTS.md  MODULE_RESTRUCTURING.md  child.rs  child_schema_constructors.rs  collections.rs  diagnosis.rs  diagnosis_schema_constructors.rs  family.rs  family_schema_constructors.rs  income.rs  income_schema_constructors.rs  individual.rs  individual_new.rs  individual_schema_constructors.rs  mod.rs  parent.rs  parent_schema_constructors.rs  traits.rs  types.rs
src/reader/: mod.rs
src/registry/: README.md  (+40 more)
tests/: lib.rs  registry_aware_models_test.rs
(+318 files in other folders)
