[package]
name = "par-reader"
version = "0.1.0"
edition = "2024"
description = "A Rust library for reading Parquet files with schema validation and advanced filtering"

[dependencies]
parquet = { version = "55.0.0", features = ["async", "arrow"] }
arrow = "55.0.0"
# Async support
tokio = { version = "1.44.2", features = ["full"] }
futures = "0.3.30"
# Parallel processing
rayon = "1.10.0"
# Utility
itertools = "0.14.0"  # For optimized iterations and efficient data transformations
num_cpus = "1.16.0"   # For optimal parallelism based on available CPUs
# Logging
log = "0.4.20"
env_logger = "0.11.8"
# Error handling
thiserror = "2.0.12"
snmalloc-rs = { version = "0.3.8", features = ["lto", "check", "native-cpu"] }

[profile.release]
lto = "fat"           # Enable Link Time Optimization for maximum performance
codegen-units = 1     # Optimize for performance over compile time
panic = "abort"       # Remove panic unwinding code to reduce binary size
opt-level = 3         # Maximum optimization level
debug = false         # No debug symbols
strip = true          # Strip debug symbols
overflow-checks = false # Disable overflow checks for performance
