[package]
name = "serde_arrow_example"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
arrow = "55.0.0"
arrow-schema = "55.0.0"
serde_arrow = { version = "0.13.3", features = ["arrow-55"] }
chrono = {version = "0.4.41",features = ["serde"]}
